// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders <Button /> without crashing 1`] = `
<button
  className="o-button"
  type="button"
/>
`;

exports[`Renders <ButtonSocial /> without crashing 1`] = `
<a
  className="o-button o-button--social"
>
  <span
    className="o-button__icon"
  />
  <span
    className="o-button__text"
  />
</a>
`;

exports[`Renders <ButtonSocialBadge /> without crashing 1`] = `
<a
  className="o-button o-button--social o-button--social-badge"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="o-button__icon"
  />
</a>
`;
